[gd_scene load_steps=3 format=3 uid="uid://h8tjmniojmk"]

[ext_resource type="Script" path="res://Scripts/GeneralScripts/StartGame.gd" id="1_i0yv1"]
[ext_resource type="PackedScene" uid="uid://dmiaekpq8rmha" path="res://Scenes/MenuScenes/AssetScenes/CustomButton.tscn" id="2_x4cmo"]

[node name="StartScene" type="Node2D"]
script = ExtResource("1_i0yv1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 371.0
offset_top = 182.0
offset_right = 1519.0
offset_bottom = 869.0

[node name="UsernameText" type="LineEdit" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 120

[node name="ContinueButton" parent="Control/VBoxContainer" instance=ExtResource("2_x4cmo")]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Continue"

[connection signal="text_submitted" from="Control/VBoxContainer/UsernameText" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Control/VBoxContainer/ContinueButton" to="." method="_on_custom_button_pressed"]
