[gd_scene load_steps=4 format=3 uid="uid://b87mc7nq4qskn"]

[ext_resource type="Script" path="res://Scripts/GeneralScripts/StartGame.gd" id="1_ae4ue"]
[ext_resource type="PackedScene" uid="uid://dmiaekpq8rmha" path="res://Scenes/MenuScenes/AssetScenes/CustomButton.tscn" id="2_srknd"]
[ext_resource type="Texture2D" uid="uid://bwimom06a2td8" path="res://Assets/Menu/CustomButton/whiteSquare.png" id="3_gaybi"]

[node name="InitialMenu" type="Node2D"]
script = ExtResource("1_ae4ue")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 371.0
offset_top = 182.0
offset_right = 1519.0
offset_bottom = 869.0
theme_override_constants/separation = 70

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "What's your name?"
horizontal_alignment = 1

[node name="UsernameText" type="LineEdit" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 85
placeholder_text = "username"
alignment = 1
max_length = 20
flat = true

[node name="ContinueButton" parent="Control/VBoxContainer" instance=ExtResource("2_srknd")]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Continue"

[node name="Sprite2D" type="Sprite2D" parent="Control/VBoxContainer/ContinueButton"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(574, 80.5)
scale = Vector2(2.55111, 0.706667)
texture = ExtResource("3_gaybi")

[node name="DebugLabel" type="Label" parent="."]
offset_left = 454.0
offset_top = 878.0
offset_right = 1322.0
offset_bottom = 1032.0
theme_override_font_sizes/font_size = 20

[connection signal="pressed" from="Control/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
